--- a/src/Pages/Faqs/faqs.scss
+++ b/src/Pages/Faqs/faqs.scss
@@ -13,4 +13,9 @@
              color: white;
              font-size: 100px;
          }
+    @media screen and (max-width:590px){
+        h3{
+            font-size: 40px;
+        }
+    }
  }
